public/js/components/Sources.css
.sources-panel {
  flex: 1;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.sources-header {
  height: 30px;
  border-bottom: 1px solid var(--theme-splitter-color);
  padding-left: 10px;
  line-height: 30px;
  font-size: 1.2em;
}

.sources-header-info {
  font-size: 0.7em;
  color: var(--theme-comment-alt);
  font-weight: lighter;
  padding-right: 10px;
  float: right;
}

.sources-list {
  flex: 1;
  display: flex;
  overflow: hidden;
}

ul.sources-list {
  list-style: none;
  margin: 20px 0;
  padding: 0;
  padding-left: 10px;
  flex: 1;
  white-space: nowrap;
}

.sources-list ul {
  list-style: none;
  margin: 0.5em 0;
  padding: 0;
}

.sources-list .source-item {
  list-style: none;
  white-space: nowrap;
}

.sources-list .label {
  font-size: 1em;
  padding-left: 10px;
  color: var(--theme-comment);
}

.sources-list .source-item.selected {
  background-color: var(--theme-selection-background);
}

.sources-list .source-item.selected .label {
  color: var(--theme-selection-color);
}

.arrow,
.folder,
.domain,
.file,
.worker {
  fill: var(--theme-splitter-color);
}

.domain,
.file,
.worker {
  position: relative;
  top: 1px;
}

.worker,
.folder {
  position: relative;
  top: 2px;
}

.domain svg,
.folder svg,
.worker svg {
  width: 15px;
  margin-right: 5px;
}

.file svg {
  width: 13px;
  margin-right: 5px;
}

.tree {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;

  flex: 1;
  white-space: nowrap;
  overflow: auto;
}

.tree button {
  display: block;
}

.tree .node {
  padding: 2px 5px;
  position: relative;
  cursor: pointer;
}

.tree .node:hover {
  background: var(--theme-tab-toolbar-background);
}

.tree .node.focused {
  color: white;
  background-color: var(--theme-selection-background);
}

.tree .node > div {
  margin-left: 10px;
}

.tree .node.focused svg {
  fill: white;
}

.sources-list .tree-node button {
  position: fixed;
}

